Added a license notice

--- a/site/_content/templates/sidebar_about_equalsverifier.html
+++ b/site/_content/templates/sidebar_about_equalsverifier.html
@@ -1,4 +1,6 @@
 <section>
   <h1>About EqualsVerifier</h1>
-  EqualsVerifier is a Java tool that can be used in unit tests. It verifies whether the contract for the <tt>equals</tt> and <tt>hashCode</tt> methods is met.
+  <p>EqualsVerifier is a Java tool that can be used in unit tests. It verifies whether the contract for the <tt>equals</tt> and <tt>hashCode</tt> methods is met.</p>
+
+  <p>EqualsVerifier is open source, and released under the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License 2.0</a>.</p>
 </section>
