Added a separate EqualsVerifier help page

--- a/site/_content/templates/nav_equalsverifier.html
+++ b/site/_content/templates/nav_equalsverifier.html
@@ -1,6 +1,6 @@
 <ul class="main-navigation">
   <li><a href="{{ site.root }}">Blog</a></li>
   <li><a href="{{ pcurl('equalsverifier') }}">EqualsVerifier</a></li>
-  <li><a href="{{ pcurl('equalsverifier/documentation') }}">Documentation</a></li>
-  <li><a href="{{ pcurl('equalsverifier/errormessages') }}">Error messages</a></li>
+  <li><a href="{{ pcurl('equalsverifier/help') }}">Need help?</a></li>
+  <li><a href="{{ pcurl('equalsverifier/errormessages') }}">Error messages explained</a></li>
 </ul>
