Added Travis CI build status image to EqualsVerifier sidebar

--- a/site/_content/templates/sidebar_about_equalsverifier.html
+++ b/site/_content/templates/sidebar_about_equalsverifier.html
@@ -3,4 +3,6 @@
   <p>EqualsVerifier is a Java tool that can be used in unit tests. It verifies whether the contract for the <tt>equals</tt> and <tt>hashCode</tt> methods is met.</p>
 
   <p>EqualsVerifier is open source, and released under the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License 2.0</a>.</p>
+
+  <p><a href="https://travis-ci.org/jqno/equalsverifier"><img src="https://travis-ci.org/jqno/equalsverifier.png" alt="Build Status" style="border:0;"></a></p>
 </section>
