--- a/site/_content/templates/sidebar_twitter.html
+++ b/site/_content/templates/sidebar_twitter.html
@@ -1,19 +1,7 @@
 {% if site.twitter_handle %}
 <section>
-  <h1>Latest Tweets</h1>
-  <ul id="tweets">
-    <li class="loading">Status updating...</li>
-  </ul>
-  <script type="text/javascript">
-    $.domReady(function(){
-      getTwitterFeed("{{site.twitter_handle}}", 5, false);
-    });
-  </script>
-  <script src="{{ site.root }}js/twitter.js" type="text/javascript"> </script>
-  {% if site.twitter_follow %}
-    <a href="http://twitter.com/{{ site.twitter_handle }}" class="twitter-follow-button" data-show-count="true">Follow @{{ site.twitter_handle }}</a>
-  {% else %}
-    <p>Follow <a href="http://twitter.com/{{site.twitter_handle}}">@{{ site.twitter_handle }}</a></p>
-  {% endif %}
+  <h1 style="margin-bottom: 5px">My latest tweets</h1>
+  <a class="twitter-timeline"  href="https://twitter.com/{{ site.twitter_handle }}"  data-screen-name="{{ site.twitter_handle }}"  data-widget-id="345283144313880576">Tweets by @{{ site.twitter_handle }}</a>
+  <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 </section>
 {% endif %}
