--- a/site/_content/templates/head.html
+++ b/site/_content/templates/head.html
@@ -8,7 +8,7 @@
   <meta charset="utf-8">
   <title>{{ settings.either(blogs[page.blog].title, site.title) }}{% if page.title is not empty %} &mdash; {{ page.title }}{% endif %}</title>
   <meta name="author" content="{{ site.author }}">
-  <meta name="description" content="{{ site.meta_description }}" />
+  <meta name="description" content="{{ settings.either(blogs[page.blog].meta_description, site.meta_description) }}" />
 
   <!-- http://t.co/dKP3o1e -->
   <meta name="HandheldFriendly" content="True">
