Switch to nicer-looking EqualsVerifier badges

--- a/site/_content/templates/sidebar_about_equalsverifier.html
+++ b/site/_content/templates/sidebar_about_equalsverifier.html
@@ -5,7 +5,7 @@
   <p>EqualsVerifier is open source, and released under the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License 2.0</a>.</p>
 
   <p>
-    <a href="https://travis-ci.org/jqno/equalsverifier"><img src="https://travis-ci.org/jqno/equalsverifier.png" alt="Build Status" style="border:0;"></a>
-    <a href="https://maven-badges.herokuapp.com/maven-central/nl.jqno.equalsverifier/equalsverifier"><img src="https://maven-badges.herokuapp.com/maven-central/nl.jqno.equalsverifier/equalsverifier/badge.png" alt="Maven Central" style="border:0;"></a>
+    <a href="https://maven-badges.herokuapp.com/maven-central/nl.jqno.equalsverifier/equalsverifier"><img src="https://img.shields.io/maven-central/v/nl.jqno.equalsverifier/equalsverifier.svg?style=plastic" alt="Maven Central" style="border:0;"></a>
+    <a href="https://travis-ci.org/jqno/equalsverifier"><img src="https://img.shields.io/travis/jqno/equalsverifier.svg?style=plastic" alt="Build Status" style="border:0;"></a>
   </p>
 </section>
