Add license and coveralls badge for EqualsVerifier

--- a/site/_content/templates/sidebar_about_equalsverifier.html
+++ b/site/_content/templates/sidebar_about_equalsverifier.html
@@ -1,11 +1,11 @@
 <section>
   <h1>About EqualsVerifier</h1>
-  <p>EqualsVerifier is a Java tool that can be used in unit tests. It verifies whether the contract for the <tt>equals</tt> and <tt>hashCode</tt> methods is met.</p>
-
-  <p>EqualsVerifier is open source, and released under the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License 2.0</a>.</p>
+  <p><a href="https://github.com/jqno/equalsverifier">EqualsVerifier</a> is an open source Java tool that can be used in unit tests. It verifies whether the contract for the <tt>equals</tt> and <tt>hashCode</tt> methods is met.</p>
 
   <p>
-    <a href="https://maven-badges.herokuapp.com/maven-central/nl.jqno.equalsverifier/equalsverifier"><img src="https://img.shields.io/maven-central/v/nl.jqno.equalsverifier/equalsverifier.svg?style=plastic" alt="Maven Central" style="border:0;"></a>
+    <a href="https://github.com/jqno/equalsverifier/blob/master/LICENSE.md"><img src="https://img.shields.io/:license-Apache%202.0-blue.svg?style=plastic" alt="Apache 2.0" style="border:0;"></a>
     <a href="https://travis-ci.org/jqno/equalsverifier"><img src="https://img.shields.io/travis/jqno/equalsverifier.svg?style=plastic" alt="Build Status" style="border:0;"></a>
+    <a href="https://maven-badges.herokuapp.com/maven-central/nl.jqno.equalsverifier/equalsverifier"><img src="https://img.shields.io/maven-central/v/nl.jqno.equalsverifier/equalsverifier.svg?style=plastic" alt="Maven Central" style="border:0;"></a>
+    <a href="https://coveralls.io/r/jqno/equalsverifier"><img src="https://img.shields.io/coveralls/jqno/equalsverifier.svg?style=plastic" alt="Coveralls" style="border:0;"></a>
   </p>
 </section>
